# sshm

./: .coveragerc  .pre-commit-config.yaml  README.md  install.sh  mypy.ini  pyproject.toml  setup.py
.github/workflows/: tests.yml
sshm/: __init__.py  cli.py  config.py  formatters.py  manager.py  models.py  utils.py
tests/: __init__.py  test_manager.py  test_models.py
