[tool.poetry]
name = "sshm"
version = "0.1.0"
description = "SSH CLI Manager"
authors = ["palace22"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
paramiko = "^3.5.0"
rich = "^13.9.3"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
sshm = "sshm.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"